bit of clean up and fixed bug in task 2
