# Order-Comments-Api/routes/api.php
@@ -13,11 +13,11 @@ use Illuminate\Support\Facades\Route;
 | be assigned to the "api" middleware group. Make something great!
 |
 */
-Route::post('/UpdateOrder/{orderId}', 'App\Http\Controllers\Api\OrderController@UpdateOrder');
-Route::post('/CreateOrder', 'App\Http\Controllers\Api\OrderController@CreateOrder');
-Route::get('/UpdateAllExpectedShipDates', 'App\Http\Controllers\Api\ExpectedShipDateController@UpdateAllExpectedShipDates');
-Route::get('/UpdateExpectedShipDate/{orderId}', 'App\Http\Controllers\Api\ExpectedShipDateController@UpdateExpectedShipDate');
-Route::get('/GetSortedComments', 'App\Http\Controllers\Api\OrderCommentsController@GetSortedComments');
+Route::post('/updateOrder/{orderId}', 'App\Http\Controllers\Api\OrderController@updateOrder');
+Route::post('/createOrder', 'App\Http\Controllers\Api\OrderController@createOrder');
+Route::get('/updateAllExpectedShipDates', 'App\Http\Controllers\Api\ExpectedShipDateController@updateAllExpectedShipDates');
+Route::get('/updateExpectedShipDate/{orderId}', 'App\Http\Controllers\Api\ExpectedShipDateController@updateExpectedShipDate');
+Route::get('/getSortedComments', 'App\Http\Controllers\Api\OrderCommentsController@getSortedComments');
 Route::get('/user', function (Request $request) {
     return $request->user();
 });
